# Kersovay

./: AppointmentParser.h  CMakeLists.txt  PatientParser.h  array.h  avltree.cpp  avltree.hpp  avltree2.hpp  avltree3.hpp  avltreedialog.cpp  avltreedialog.h  avltreedialog.ui  data_manager.hpp  globals.cpp  globals.h  hashtable.hpp  hashtabledialog.cpp  hashtabledialog.h  hashtabledialog.ui  hashtablewidget.cpp  hashtablewidget.h  linkedlist.cpp  linkedlist.h  main.cpp  mainwindow.cpp  mainwindow.h  types.h
